Added license + custom header. Modified README.

--- a/shunt_connector/examples/create_s_and_e_shunt_model.ipynb
+++ b/shunt_connector/examples/create_s_and_e_shunt_model.ipynb
@@ -32,16 +32,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#!/usr/bin/env python\n",
+    "# -*- coding: utf-8 -*-\n",
+    "\"\"\"\n",
+    "Standard main script for the shunt connection procedure.\n",
+    "\n",
+    "Copyright 2021 Christian Doppler Laboratory for Embedded Machine Learning\n",
+    "\n",
+    "Licensed under the Apache License, Version 2.0 (the \"License\");\n",
+    "you may not use this file except in compliance with the License.\n",
+    "You may obtain a copy of the License at\n",
+    "\n",
+    "    http://www.apache.org/licenses/LICENSE-2.0\n",
+    "\n",
+    "Unless required by applicable law or agreed to in writing, software\n",
+    "distributed under the License is distributed on an \"AS IS\" BASIS,\n",
+    "WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
+    "See the License for the specific language governing permissions and\n",
+    "limitations under the License.\n",
+    "\"\"\"\n",
+    "\n",
+    "# Built-in/Generic Imports\n",
     "import configparser\n",
     "from pathlib import Path\n",
     "import sys\n",
     "\n",
+    "# Libs\n",
     "import numpy as np\n",
     "from tensorflow import keras\n",
     "from keras_applications import correct_pad\n",
     "\n",
+    "# Own modules\n",
     "import shunt_connector\n",
     "\n",
+    "__author__ = 'Bernhard Haas'\n",
+    "__copyright__ = 'Copyright 2021, Christian Doppler Laboratory for ' \\\n",
+    "                'Embedded Machine Learning'\n",
+    "__credits__ = ['']\n",
+    "__license__ = 'Apache 2.0'\n",
+    "__version__ = '1.0.0'\n",
+    "__maintainer__ = 'Bernhard Haas'\n",
+    "__email__ = 'bernhardhaas55@gmail.com'\n",
+    "__status__ = 'Release'\n",
+    "#-------------------------------------------------------------------------------------------------------------\n",
+    "\n",
+    "# PARAMS\n",
     "s_and_e_location = 'mnv3'\n",
     "#s_and_e_location = 'en-de'\n",
     "s_and_e_ratio = 0.25"
